# HedgeX-V5

./: .gitignore  README.md  TASK_6_IMPLEMENTATION_SUMMARY.md  TASK_8_IMPLEMENTATION_SUMMARY.md  build-tauri.bat  build-tauri.ps1  package-lock.json  package.json  start-dev.bat  start-dev.ps1  start-stable.bat  start-stable.ps1  tailwind.config.js  tsconfig.build.json  tsconfig.prod.json  vite.config.ts
.cargo/: config.toml
.github/: copilot-instructions.md
.kiro/specs/hedgex-iteration/: design.md  requirements.md  tasks.md
.kiro/specs/production-ready-hedgex/: requirements.md
.kiro/steering/: structure.md  tech.md
IMPLEMENTATION_SUMMARY/: INTEGRATION_SUMMARY.md  PRODUCTION_READY_SUMMARY.md  SYSTEM_STABILITY_GUIDE.md  TASK_7_API_ENDPOINTS_IMPLEMENTATION.md
migrations/: 20250723_add_market_data_cache.sql  20250723_add_session_tokens.sql  20250724_add_strategy_performance.sql  20250728_add_backtesting_tables.sql  20250728_add_backup_metadata.sql
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  config.toml  tauri.conf.json
src-tauri/migrations/: 20250703_initial_schema.sql  20250724_add_kite_credentials.sql  20250725_auth_tables.sql  20250726_enhanced_schema.sql
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/api/: auth.rs  auth_api.rs  http_server.rs  http_server_integration.rs  http_server_test.rs  kite.rs  kite_client.rs  kite_client_test.rs  kite_historical.rs  kite_routes.rs  middleware.rs  mod.rs  ticker.rs  websocket_routes.rs
src-tauri/src/api/middleware/: auth_middleware.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: auth.rs  backtesting.rs  kite.rs  logging.rs  mod.rs  trading.rs
src-tauri/src/services/: app_service.rs  auth_service.rs  auth_service_test.rs  backtest_engine.rs  backtest_engine_minimal_test.rs  backtest_engine_test.rs  data_persistence_service.rs  data_persistence_service_test.rs  database_service.rs  enhanced_database_service.rs  kite_service.rs  mod.rs  strategy_service.rs  strategy_service_minimal_test.rs  strategy_service_test.rs  websocket_manager.rs  websocket_manager_test.rs
src-tauri/src/trading/: engine.rs  mod.rs  risk_manager.rs  strategy_manager.rs
src-tauri/src/utils/: crypto.rs  csv_parser.rs  database_utils.rs  enhanced_logger.rs  error_recovery.rs  logger.rs  mod.rs  performance_monitor.rs
src-tauri/src/utils/tests/: error_recovery_tests.rs  performance_monitor_tests.rs
src-tauri/tests/: backtesting_models_test.rs
src/components/: ApiCredentialsForm.tsx
src/components/__tests__/: AuthContext.simple.test.tsx  AuthContext.test.tsx  ErrorBoundary.test.tsx
src/components/analytics/: LogViewer.tsx  PerformanceDashboard.tsx  TradeHistoryTable.tsx
src/components/backtest/: BacktestComparison.tsx  BacktestForm.tsx  BacktestHistory.tsx  BacktestProgress.tsx  BacktestResults.tsx  index.ts
src/components/common/: ErrorAlert.tsx  ErrorBoundary.tsx
src/components/strategy/: StockSelector.tsx  StrategyControls.tsx  StrategyForm.tsx  StrategyPerformance.tsx
src/components/system/: PerformanceDashboard.tsx
src/components/trading/: ConnectionStatus.tsx  EmergencyStopButton.tsx  MarketDataDisplay.tsx  OrderBook.tsx  PositionCard.tsx
src/contexts/: AuthContext.tsx  ErrorContext.tsx
src/hooks/: useRealTimeData.ts
src/layouts/: DashboardLayout.tsx
src/lib/: api-client.ts  realtime-service.ts  utils.ts
src/pages/: AnalyticsPage.tsx  BacktestPage.tsx  DashboardPage.tsx  LoginPage.tsx  ProfilePage.tsx  SettingsPage.tsx  SignupPage.tsx  StrategiesPage.tsx  SystemStatusPage.tsx  TradesPage.tsx
src/test/: setup.ts
steering/: product.md
(+32 files in other folders)
