[package]
name = "hedgex"
version = "0.1.0"
description = "High-frequency trading application for NIFTY 50 stocks"
authors = ["HedgeX Team"]
edition = "2021"

# Optimize compilation
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = 1
opt-level = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hedgex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "net"] }
axum = { version = "0.7", features = ["ws"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
ring = "0.17"
base64 = "0.21"
thiserror = "1"
log = "0.4"
env_logger = "0.10"
websocket = "0.26"
url = "2.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
anyhow = "1.0"
rust_decimal = { version = "1.31", features = ["serde"] }
num-traits = "0.2"
argon2 = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"
async-trait = "0.1"
futures = "0.3"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
mockito = "1.2"
mockall = "0.12"
tempfile = "3.8"
flate2 = "1.0"
sysinfo = "0.30"
